Fix space issue with Header/footer
Needed to specify margin/padding to be zero too. Since I just made the bullet point invisible, it was still padding for the dot on the left side

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -8,8 +8,6 @@ body {
 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
 }
 
 img {
@@ -33,19 +31,15 @@ input {
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
 
 a {
   text-decoration: none;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 10px;
-  justify-content: space-between;
 }
 
 .left-links {
@@ -68,6 +62,8 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  flex: 1
 }
 
 .buttons {
@@ -75,10 +71,13 @@ a {
   gap: 10px;
 }
 
+.header,
 .footer {
   display: flex;
-  width: 100%;
   padding: 10px;
   justify-content: space-between;
-  background-color: #eeeeee;
+}
+
+.footer {
+  background-color: #eee;
 }
